# CTSDLPort

./: .gitignore  CMakeLists.txt  Doxyfile  Progress.md  README.md  buildSDL.sh  main.cpp
Character/: CMakeLists.txt  README.md
Character/include/: BattlingCharacter.h  Character.h  Direction.h  PlayableCharacter.h  PlayableCharacterList.h  Sprite.h
Character/src/: BattlingCharacter.cpp  Character.cpp  Direction.cpp  PlayableCharacter.cpp  PlayableCharacterList.cpp  Sprite.cpp
docs/: Notes.md
docs/html/: Background_8cpp.html  Background_8h.html  Background_8h_source.html  Character_8h.html  Character_8h_source.html  Constants_8cpp.html  Constants_8h.html  Constants_8h_source.html  DestroySdlObjects_8h.html  DestroySdlObjects_8h_source.html  Notes_8md.html  PlayableCharacter_8h.html  PlayableCharacter_8h_source.html  README_8md.html  SpriteSheet_8h.html  SpriteSheet_8h_source.html  annotated.html  classBackground-members.html  classBackground.html  classCharacter-members.html  classCharacter.html  classConstants-members.html  classConstants.html  classSpriteSheet-members.html  classSpriteSheet.html  classes.html  classes_2Background_8h_source.html  classes_2SpriteSheet_8h.html  classes_2SpriteSheet_8h_source.html  config_8h.html  config_8h_source.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.html  dir_52b4106b6168f13dcdf82e33b1d195ee.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7a6c2c27f035e4462dd10aeadba1cb4e.html  dir_7b5d38f1875f1b693f62ca6a108a1129.html  dir_d44c64559bbebec7f509842c48db8b23.html  errorHandlers_8cpp.html  errorHandlers_8h.html  errorHandlers_8h_source.html  (+18 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: Background_8cpp.tex  Background_8h.tex  Character_8h.tex  Constants_8cpp.tex  Constants_8h.tex  DestroySdlObjects_8h.tex  Notes_8md.tex  PlayableCharacter_8h.tex  SpriteSheet_8h.tex  annotated.tex  classBackground.eps  classBackground.tex  classCharacter.tex  classConstants.eps  classConstants.tex  classSpriteSheet.tex  classes_2SpriteSheet_8h.tex  config_8h.tex  dir_018e9aafb459e6e1a4953404cb0c0b1d.tex  dir_52b4106b6168f13dcdf82e33b1d195ee.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7a6c2c27f035e4462dd10aeadba1cb4e.tex  dir_7b5d38f1875f1b693f62ca6a108a1129.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  errorHandlers_8cpp.tex  errorHandlers_8h.tex  files.tex  hierarchy.tex  main_8cpp.tex  md_README.tex  md_docs_Notes.tex  refman.tex  utilities_2config_8h.tex  utilities_8cpp.tex  utilities_8h.tex
include/: Background.h  CMakeLists.txt  Character.h  PlayableCharacter.h  SpriteSheet.h  config.h
include/classes/: Background.h
include/constants/: PlayableCharacters.h  VariableConstants.h
include/run/: run.h
include/structs/: CharacterSpriteActionIndex.h  DisplayPlayableCharacter.h
include/utilities/: config.h  errorHandlers.h  setup.h  utilities.h
src/: CMakeLists.txt
src/classes/: Background.cpp
src/constants/: VariableConstants.cpp
src/run/: run.cpp
src/structs/: CharacterSpriteActionIndex.cpp  DisplayPlayableCharacter.cpp
src/utilities/: errorHandlers.cpp  setup.cpp  utilities.cpp
uml diagrams/: README.md
